--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
