--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "firebase": "^8.6.5",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
