--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^9.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.12",
     "react-image-file-resizer": "^0.4.7",
     "slugify": "^1.5.3",
